--- a/mining/templates/home.html
+++ b/mining/templates/home.html
@@ -47,10 +47,11 @@
         {% endif %}
     </div>
 
-    {% with messages=get_flashed_messages(with_categories=true) %}
+    <div style="margin-top: 60px;" >
+        {% with messages=get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category,message in messages %}
-                <div class="alert alert-{{category}}" role="alert">
+                <div class="alert alert-{{category}}" role="alert" style="margin-bottom: 0px;">
                     {{message}}
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
@@ -59,7 +60,8 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-
+    </div>
+    
     <div class="background-img-div"></div>
     <div class="webpage-content">
         <div class="content1">
