connecting the frontend prediction page to backened servers to make predictions and return it to the frontend

--- a/mining/static/CSS/prediction.css
+++ b/mining/static/CSS/prediction.css
@@ -172,10 +172,12 @@ body.no-scroll{
     font-family: "Roboto";
     font-weight: bold;
     color: black;
+    z-index: 5;
 }
 
 .cancel-result:hover{
     color: crimson;
+    text-decoration: none;
 }
 
 .instructions{
