--- a/mining/static/CSS/home.css
+++ b/mining/static/CSS/home.css
@@ -367,6 +367,7 @@ a:hover {
         width: 300px;
         height: 300px;
         margin-left: 10px;
+        display: none;
     }
 
     .model-info{
