--- a/mining/templates/prediction.html
+++ b/mining/templates/prediction.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Silica Concentration </title>
-    <link rel="stylesheet" href="../static/CSS/prediction.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/prediction.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/home.css') }}">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -206,9 +206,10 @@
             </div>   
         
         </div>
-        <button class="predict-btn" onclick="showResult();"><span>Predict</span></button>
+        <button class="predict-btn"><span>Predict</span></button>
         <div class="result-container">
-            <a href="" class="cancel-result">X</a>
+            <h4 class="prediction-message"></h4>
+            <a href="" class="cancel-result" >X</a>
         </div>
     </div>
 
