updated the placeholders of the input text boxes

--- a/mining/templates/prediction.html
+++ b/mining/templates/prediction.html
@@ -110,99 +110,99 @@
         <div class="container-div">
             <div class="input-div">
                 <div class="input-text">% Iron Feed</div>
-                <input type="text" placeholder="enter value" class="text-box" id="%Iron Feed">
+                <input type="text" placeholder="%(weight percent)" class="text-box" id="%Iron Feed">
             </div>   
             <div class="input-div">
                 <div class="input-text">% Silica Feed</div>
-                <input type="text" placeholder="enter value" class="text-box" id="% Silica Feed">
+                <input type="text" placeholder="%(weight percent)" class="text-box" id="% Silica Feed">
             </div> 
             <div class="input-div">
                 <div class="input-text">Starch Flow</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Starch Flow">
+                <input type="text" placeholder="kg/h" class="text-box" id="Starch Flow">
             </div>  
             <div class="input-div">
                 <div class="input-text">Amina Flow</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Amina Flow">
+                <input type="text" placeholder="kg/h" class="text-box" id="Amina Flow">
             </div> 
 
 
 
             <div class="input-div">
                 <div class="input-text">Ore Pulp Flow</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Ore Pulp Flow">
+                <input type="text" placeholder="m³/h" class="text-box" id="Ore Pulp Flow">
             </div>   
             <div class="input-div">
                 <div class="input-text">Ore Pulp pH</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Ore Pulp pH">
+                <input type="text" placeholder="pH" class="text-box" id="Ore Pulp pH">
             </div> 
             <div class="input-div">
                 <div class="input-text">Ore Pulp Density</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Ore Pulp Density">
+                <input type="text" placeholder="t/m³" class="text-box" id="Ore Pulp Density">
             </div>  
             <div class="input-div">
                 <div class="input-text">Flotation Column 01 Air Flow</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 01 Air Flow">
+                <input type="text" placeholder="L/min" class="text-box" id="Flotation Column 01 Air Flow">
             </div> 
             
 
 
             <div class="input-div">
                 <div class="input-text">Flotation Column 02 Air Flow</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 02 Air Flow">
+                <input type="text" placeholder="L/min" class="text-box" id="Flotation Column 02 Air Flow">
             </div>   
             <div class="input-div">
                 <div class="input-text">Flotation Column 03 Air Flow</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 03 Air Flow">
+                <input type="text" placeholder="L/min" class="text-box" id="Flotation Column 03 Air Flow">
             </div> 
             <div class="input-div">
                 <div class="input-text">Flotation Column 04 Air Flow</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 04 Air Flow">
+                <input type="text" placeholder="L/min" class="text-box" id="Flotation Column 04 Air Flow">
             </div>  
             <div class="input-div">
                 <div class="input-text">Flotation Column 05 Air Flow</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 05 Air Flow">
+                <input type="text" placeholder="L/min" class="text-box" id="Flotation Column 05 Air Flow">
             </div> 
 
 
             <div class="input-div">
                 <div class="input-text">Flotation Column 06 Air Flow</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 06 Air Flow">
+                <input type="text" placeholder="L/min" class="text-box" id="Flotation Column 06 Air Flow">
             </div>   
             <div class="input-div">
                 <div class="input-text">Flotation Column 07 Air Flow</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 07 Air Flow">
+                <input type="text" placeholder="L/min" class="text-box" id="Flotation Column 07 Air Flow">
             </div> 
             <div class="input-div">
                 <div class="input-text">Flotation Column 01 Level</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 01 Level">
+                <input type="text" placeholder="mm" class="text-box" id="Flotation Column 01 Level">
             </div>  
             <div class="input-div">
                 <div class="input-text">Flotation Column 02 Level</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 02 Level">
+                <input type="text" placeholder="mm" class="text-box" id="Flotation Column 02 Level">
             </div> 
 
 
             <div class="input-div">
                 <div class="input-text">Flotation Column 03 Level</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 03 Level">
+                <input type="text" placeholder="mm" class="text-box" id="Flotation Column 03 Level">
             </div>   
             <div class="input-div">
                 <div class="input-text">Flotation Column 04 Level</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 04 Level">
+                <input type="text" placeholder="mm" class="text-box" id="Flotation Column 04 Level">
             </div> 
             <div class="input-div">
                 <div class="input-text">Flotation Column 05 Level</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 05 Level">
+                <input type="text" placeholder="mm" class="text-box" id="Flotation Column 05 Level">
             </div>  
             <div class="input-div">
                 <div class="input-text">Flotation Column 06 Level</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 06 Level">
+                <input type="text" placeholder="mm" class="text-box" id="Flotation Column 06 Level">
             </div> 
 
 
             <div class="input-div" >
                 <div class="input-text">Flotation Column 07 Level</div>
-                <input type="text" placeholder="enter value" class="text-box" id="Flotation Column 07 Level">
+                <input type="text" placeholder="mm" class="text-box" id="Flotation Column 07 Level">
             </div>   
         
         </div>
